--- a/index.html
+++ b/index.html
@@ -55,25 +55,24 @@
           </nav>
         </div> <!-- ./header__top-inner -->
       </div> <!-- ./header__top -->
-
       <div class="header__content-inner">
-        
         <h1 class="header__title">WAWE</h1>
         <h5 class="header__subtitle">Школа серфинга на канарских Островах</h5>
         <a class="header__icon" href="#">
           <img src="images/mouse.svg" alt="mouse icon">
         </a>
-
       </div>
-
-
-
     </div>
   </header>
 
 
 
 
+  <div class="section">
+    <div class="container">
+      123
+    </div>
+  </div>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
