--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </ul>
           </nav>
         </div> <!-- ./header__top-inner -->
-        </div> <!-- ./header__top -->
+      </div> <!-- ./header__top -->
 
       <div class="header__content-inner">
         <h1 class="header__title">WAWE</h1>
@@ -70,11 +70,109 @@
 
 
 
-  <div class="section">
+
+
+
+
+  <div class="about">
     <div class="container">
-      123
+      <div class="about__inner">
+        <h2 class="title about__title">О ШКОЛЕ, О СЕРФИНГЕ, О КАНАРАХ </h2>
+        <div class="about__text">
+
+          <p>Канарские острова не случайно называют европейскими Гавайями – это идеальное место для поклонников
+            серфинга: стабильный
+            теплый ветер круглый год, песчаные пляжи, километры нетронутых просторов и прозрачное море. А настоящей
+            Меккой для
+            серфингистов становится Фуэртевентура – второй по величине остров архипелага.</p>
+          <p>Именно здесь лучшее в Испании место, в котором можно пройти обучение серфингу. Кроме того, что зимой и
+            осенью сюда
+            приходят огромные атлантические волны, Фуэртевентура может похвастать и множеством мелководных спокойных
+            лагун, отлично
+            подходящих для обучения начинающих серфингистов.</p>
+          <p>Серфинг на Канарских островах доступен круглый год – и волны, и подходящая погода здесь есть всегда.
+            Причем волну,
+            подходящую по уровню, сможет найти и настоящий профи, и новичок. Не случайно считается, что именно это
+            место лучше всего
+            подойдет для обучения здесь возможно без сложностей переходить на новый уровень.</p>
+          <p>Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге
+            невозможно
+            представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет интересовать
+            одна цель –
+            обучение серфингу.</p>
+
+
+          <p>Пока что вы только хотите понять, что такое серфинг, или уже испытали всю прелесть катания на волнах, но
+            желаете поднять
+            свой уровень? Наша школа серфинга сможет предложить обучение для любого уровня подготовки.
+          </p>
+          <p>Четыре часа увлекательных занятий в день помогут вам уверенно покорять волны, почувствовать себя
+            настоящим серфингистом.</p>
+          <p>Основные достоинства нашей русской школы – высокое качество преподавания и организации занятий,
+            безопасность (все наши
+            клиенты застрахованы в компании Allianz), отличный инвентарь и экипировка (предоставляется на весь курс
+            обучения), в том
+            числе мягкие безопасные доски для начинающих.</p>
+          <p>Сначала мы определяем уровень катания и физической подготовки и только потом составляем программу
+            подготовки. И можем
+            заверить, что после того, как закончится обучение, вы не только получите массу великолепных ощущений, но и
+            это уровень
+            поднимется на новую ступень.</p>
+
+
+        </div>
+      </div>
     </div>
   </div>
+
+
+
+
+  <div class="school">
+    <div class="container">
+      <h2 class="title school__title">В ШКОЛЕ ВЫ ПОЛУЧИТЕ</h2>
+
+
+      <div class="school__items">
+        <div class="school__item">
+
+          <div class="school__item-itext">
+            <div class="school__item-titleblock">
+              <img src="images/school/1.png" alt="">
+              <div class="school__item-ititle">ПРОЖИВАНИЕ</div>
+            </div>
+            <p>Наша школа серфинга находится в 100 м от океанского побережья. К услугам гостей открытый бассейн и
+              бесплатный Wi-Fi. Из
+              верхней террасы открывается вид на океан. Расстояние до центра города 15 мин.</p>
+          </div>
+
+          <div class="school__item-itext">
+            <div class="school__item-titleblock">
+              <img src="images/school/2.png" alt="">
+              <div class="school__item-ititle">ПЕРЕЛЕТ И
+                СТРАХОВКУ</div>
+            </div>
+            <p>Все участники программы застрахованы страховой компанией Allianz.<br>
+              Перелет из Тенерифе до острова Лансароте и обратно входит в стоимость программы</p>
+          </div>
+          <div class="school__item-itext">
+            <div class="school__item-titleblock">
+              <img src="images/school/3.png" alt="">
+              <div class="school__item-ititle">ОБУЧЕНИЕ И
+                ЭКИПИРОВКУ</div>
+            </div>
+            <p>Все оборудование и экипировка известных производителей и предоставляется на весь курс программы.
+              Тренировочный процесс
+              начинается с определения вашего уровня катания</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
