--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
 
   <div class="school">
     <div class="container">
-      <h2 class="title school__title">В ШКОЛЕ ВЫ ПОЛУЧИТЕ</h2>
-
-
       <div class="school__items">
+        <h2 class="title school__title">В ШКОЛЕ ВЫ ПОЛУЧИТЕ</h2>
+
         <div class="school__item">
 
           <div class="school__item-itext">
@@ -166,11 +165,89 @@
               начинается с определения вашего уровня катания</p>
           </div>
         </div>
+
+        <div class="school__aside">
+
+          <div class="school__aside-item">
+
+            <div class="expertise__info">
+              <div>
+                <div class="expertise__info-flex">
+                  <img src="images/vector/1.png" alt=""><span>85%</span>
+                </div>
+                <p>Приехали второй раз</p>
+
+              </div>
+
+
+            </div>
+            <div class="expertise__info">
+              <div>
+                <div class="expertise__info-flex">
+                  <img src="images/vector/2.png" alt=""> <span>95%</span>
+                </div>
+                <p>Научились кататься</p>
+
+              </div>
+
+
+            </div>
+            <div class="expertise__info">
+              <div>
+                <div class="expertise__info-flex">
+                  <img src="images/vector/3.png" alt=""> <span>99%</span>
+                </div>
+                <p>Довольных клиентов</p>
+
+              </div>
+
+
+            </div>
+
+
+
+          </div>
+
+          <div class="school__aside-text">
+            <p>
+              Огромным преимуществом нашей школы является собственная методика обучения. Мы разработали собственный
+              стиль обучения
+              серфингу, который позволяет новичкам максимально быстро встать на доску.
+            </p>
+            <p>
+              Именно наша методика и наши преподаватели позволили нам пройти аттестацию Федерации серфинга Канарских
+              островов -
+              FEDERACIÓN CANARIA DE SURF. Это означает, что наша школа соответствует всем мировым стандартам.
+              Переаттестация
+              производится ежегодно и это позволяет нам всегда стремиться к улучшению обучения.
+            </p>
+          </div>
+
+        </div>
+
       </div>
 
     </div>
   </div>
 
+
+  <div class="peaks">
+    <div class="container">
+      <div class="peaks__inner">
+        <h2 class="title peaks__title">ПОКОРЯЙ ВЕРШИНЫ</h2>
+        <p>Преподаватели нашей школы серфинга в числе лучших серферов на Канарских островах. Среди них - чемпион Европы по
+        лонгборду, который с радостью поделится опытом как с новичками, так и более опытными серферами.
+        Все члены преподавательского состава являются сертифицированными членами Федерации серфинга Канарских островов.
+        Некоторые из них знают русский язык, что определенно позиционирует нас как русскую школу серфинга за границей!</p>
+        <p>Весь тренерский состав регулярно участвует в семинарах и курсах повышения квалификации, которые проводятся по всему миру
+        различными известными серф-клубами и федерациями. Поэтому в нашей школе серфинга вы можете быть спокойны: вас обучают
+        лучшие тренеры!</p>
+        <p>Методика обучения серфингу рассчитана как на новичков, на серферов среднего уровня, так и на серферов уровня ТОП.
+        Тренеры находят подход к каждому, несмотря на то, что обучение серфингу в нашей школе производится в группах. Однако, мы
+        предлагаем персональные уроки серфинга - только вы и тренер! П</p>
+      </div>
+    </div>
+  </div>
 
 
 
